--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,5 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Clean, build, and test
-      run:
-        sudo apt-get install gfortran
-        bash ./test.sh
+      run: bash ./test.sh
+
